--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6{margin: 7px 0 7px 0;padding: 0;font-size: 19px;}
 }
 
 /* The dots/bullets/indicators */
-.dot,.dot1 {
+.dot {
   height: 10px;
   width: 10px;
   margin: 0 2px;
@@ -68,7 +68,7 @@ img{width:100%}
  
     /* Whatsapp Setting */
     var walink      = 'https://web.whatsapp.com/send',
-        phone       = '6285171602756',
+        phone       = '6282234357003',
         text        = 'Halo Admin.? Saya Mau Order KOPI JUWARA.',
         text2       = 'Terimakasih, Tolong Segera Dikirim YA..!',
         text_yes    = 'Orderan Sudah Terkirim.',
