--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif; margin: 0 auto; max-width: 360px; padding: 5px;}
+body {font-family: Verdana, sans-serif; margin: 0 auto; max-width: 360px; padding: 5px; background-color: #F0F3F4;}
 
 h1,h2,h3,h4,h5,h6{margin: 7px 0 7px 0;padding: 0;font-size: 19px;}
 
